<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
	    <groupId>com.ontimize.labs</groupId>
	    <artifactId>ontimize-bom</artifactId>
	    <version>7.0.0-SNAPSHOT</version>
		<relativePath>ontimize-bom</relativePath>
	</parent>
	<artifactId>ontimize-core-parent</artifactId>
	<packaging>pom</packaging>

	<modules>
		<module>ontimize-bom</module>
		<module>ontimize-core-icon</module>
		<module>ontimize-core-common</module>
		<module>ontimize-core-client</module>
		<module>ontimize-core-client-sam</module>
		<module>ontimize-more-plaf</module>
		<module>ontimize-more-plaf-styles</module>
		<module>ontimize-jee-hessian</module>
		<module>ontimize-jee-desktopclient</module>
		<module>ontimize-jee-dms</module>
		<module>ontimize-jee-report</module>
		<module>ontimize-jee-server-hessian-api</module>
		<module>ontimize-jee-callback-websocket</module>
		<module>ontimize-jee-callback-cometd</module>
		<module>ontimize-jee-desktopclient-testtools</module>
		<module>ontimize-jee-common</module>
		<module>ontimize-jee-server</module>
		<module>ontimize-jee-server-rest</module>
		<module>ontimize-jee-server-jdbc</module>
		<module>ontimize-jee-webclient-addons</module>
		<module>ontimize-jee-jacoco</module>
	</modules>

	<organization>
		<name>Imatia Innovation</name>
		<url>http://imatia.com</url>
	</organization>

	<name>Ontimize Core Parent</name>
	<description>Ontimize Core Parent contains all the elements that are not
		related to the server part of Ontimize Core.
	</description>
	<url>https://www.ontimize.com</url>

	<scm>
		<connection>
			smc:git:git://github.com/imatia-innovation/ontimize-core-labs.git</connection>
		<url>https://github.com/imatia-innovation/ontimize-core-labs/tree/main</url>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>imatia-artifactory</id>
			<name>libs-snapshot-local</name>
			<url>https://artifactory.imatia.com/artifactory/libs-snapshot-local</url>
		</snapshotRepository>
		<repository>
			<id>imatia-artifactory</id>
			<name>libs-imatia-local</name>
			<url>https://artifactory.imatia.com/artifactory/libs-imatia-local</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>imatia-artifactory</id>
			<name>libs-imatia-local</name>
			<url>https://artifactory.imatia.com/artifactory/libs-imatia-local</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<!--Public remote repository to discover new JAI versions-->
		<repository>
			<id>jai-public</id>
			<url>https://repo.osgeo.org/repository/release/</url>
		</repository>
	</repositories>

	<properties>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>

		<!-- =========================================================== -->
		<!-- Encoding -->
		<!-- =========================================================== -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- =========================================================== -->
		<!-- Plugin versions -->
		<!-- =========================================================== -->
		<compiler.plugin.version>3.8.1</compiler.plugin.version>
		<dependency-maven-plugin.version>1.0</dependency-maven-plugin.version>
		<ear.plugin.version>2.8</ear.plugin.version>
		<maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
		<maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
		<resources.plugin.version>3.2.0</resources.plugin.version>
		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
		<war.plugin.version>2.4</war.plugin.version>
		<javadoc-plugin.version>3.1.0</javadoc-plugin.version>
		<maven-invoker.version>2.2</maven-invoker.version>
		<!-- Jacoco -->
		<jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
		<maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
		<skip.unit.tests>false</skip.unit.tests>
		<skip.integration.tests>false</skip.integration.tests>
		<central-publishing-maven-plugin.version>0.7.0</central-publishing-maven-plugin.version>
		<!-- SONARCloud configuration -->
		<sonar.organization>ontimize</sonar.organization>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${javadoc-plugin.version}</version>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
							<configuration>
								<failOnError>false</failOnError>
								<doclint>none</doclint>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven-jar-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven-source-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco-maven-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${resources.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${compiler.plugin.version}</version>
					<configuration>
						<verbose>false</verbose>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
						<encoding>${project.build.sourceEncoding}</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>dependency-maven-plugin</artifactId>
					<version>${dependency-maven-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>Cp1252</encoding>
					<fork>true</fork>
					<compilerArgs>
						<arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.shared</groupId>
						<artifactId>maven-invoker</artifactId>
						<version>${maven-invoker.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>generate-version</id>
			<build>
				<plugins>
					<!-- Manifest -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<configuration>
							<archive>
								<addMavenDescriptor>false</addMavenDescriptor>
								<manifest>
									<mainClass>com.ontimize.util.jar.JarUtil</mainClass>
								</manifest>
								<manifestEntries>
									<Built-By>${project.organization.name}</Built-By>
									<Version-number>${project.version}</Version-number>
									<Version-date>${maven.build.timestamp}</Version-date>
								</manifestEntries>
							</archive>
						</configuration>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<excludeResources>true</excludeResources>
									<excludes>
										<exclude>com/ontimize/ols/**/*</exclude>
									</excludes>
								</configuration>
							</execution>
							<execution>
								<id>attach-private-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<finalName>
										${project.artifactId}-${project.version}-full</finalName>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
